--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,7 @@
         <activity
             android:name=".Address"
             android:noHistory="true" />
+        <activity android:name=".HospitalCall"></activity>
     </application>
 
 </manifest>
