Adding all the stations is done..

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,10 @@
         <activity
             android:name=".ServiceAddress"
             android:noHistory="true" />
+
+        <activity
+            android:name=".RoadSideAddress"
+            android:noHistory="true" />
         <activity android:name=".HospitalCall"></activity>
     </application>
 
