opening hours dialog fix

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,9 @@
             android:name=".ServiceAddress"
             android:noHistory="true" />
         <activity
+            android:name=".HospitalAddress"
+            android:noHistory="true" />
+        <activity
             android:name=".RoadSideAddress"
             android:noHistory="true" />
         <activity
