--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,6 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-
-
     <supports-screens android:requiresSmallestWidthDp="600" />
 
     <application
@@ -67,7 +65,7 @@
         <activity
             android:name=".RoadSideAddress"
             android:noHistory="true" />
-
+        <activity android:name=".EditList"></activity>
     </application>
 
 </manifest>
