--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
-        <activity android:name="com.DesignQuads.AssistanceFinder.UntagLocation"></activity>
+        <activity android:name="com.DesignQuads.AssistanceFinder.UntagLocation"
+            android:noHistory="true"></activity>
     </application>
 </manifest>
