--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,35 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <activity
+            android:name="com.DesignQuads.AssistanceFinder.WelcomeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.DesignQuads.AssistanceFinder.MainActivity"
+            android:label="@string/title_activity_welcome"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
+
+
+        <!--<activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>-->
+
+
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -36,23 +65,22 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity
-            android:name=".MainActivity"
-            android:label="Assistance Finder"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".login" />
-        <activity android:name=".register" />
-        <activity android:name=".list" />
+        <activity
+            android:name=".login"
+            android:noHistory="true" />
+        <activity
+            android:name=".register"
+            android:noHistory="true" />
+        <activity
+            android:name=".list"
+            android:noHistory="true" />
         <activity
             android:name=".ProfileActivity"
             android:noHistory="true" />
-        <activity android:name=".TagLocation" />
+        <activity
+            android:name=".TagLocation"
+            android:noHistory="true" />
         <activity
             android:name=".Address"
             android:noHistory="true" />
@@ -65,7 +93,10 @@
         <activity
             android:name=".RoadSideAddress"
             android:noHistory="true" />
-        <activity android:name=".EditList"></activity>
+        <activity
+            android:name=".EditList"
+            android:noHistory="true" />
+
     </application>
 
 </manifest>
