--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -1,7 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
-        <activity android:name="com.DesignQuads.AssistanceFinder.UntagLocation"
-            android:noHistory="true"></activity>
+        <activity
+            android:name="com.DesignQuads.AssistanceFinder.UntagLocation"
+            android:noHistory="true" />
+        <activity android:name="com.DesignQuads.AssistanceFinder.AboutUs"></activity>
     </application>
+
 </manifest>
