--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_welcome"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <!--
         <activity
@@ -96,7 +96,8 @@
             android:name=".WelcomeActivity"
             android:noHistory="true"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
-        <activity android:name=".ViewDetails"></activity>
+        <activity android:name=".ViewDetails" />
+        <activity android:name=".AboutUs"></activity>
     </application>
 
 </manifest>
